[package]
name = "mru"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["tolluset <dlqud19@gmail.com>"]
description = "MRU - Update packages across multiple repositories"
repository = "https://github.com/tolluset/mru"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.19.1"
toml = "0.8.20"
